# kode-bridge

./: .cspell.json  CHANGELOG.md  CNAME  Cargo.toml  Makefile  PLATFORM_GUIDE.md  README.md  README_CN.md  SERVER_GUIDE.md  clippy.toml  crates.js  help.html  renovate.json  rustfmt.toml  search-index.js  settings.html  src-files.js
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: bench_version.rs
benches/unix/: bench_version.rs
benches/windows/: bench_version.rs
docs/: migration-guide.md  platform-configuration.md  quick-start.md  server-development.md
examples/: api_comparison.rs  clean_architecture.rs  concurrent_proxy_test.rs  elegant_http.rs  elegant_stream.rs  http_server.rs  metrics_demo.rs  modern_example.rs  proxy.rs  quick_put_test.rs  request.rs  request_large.rs  server.rs  stream_server.rs  traffic.rs  traffic_monitor.rs  two_clients.rs  unix_request.rs  unix_request_large.rs  windows_request.rs
examples/unix/: request.rs  request_large.rs
examples/windows/: request.rs  request_large.rs
kode_bridge/: all.html  index.html  sidebar-items.js
kode_bridge/buffer_pool/: fn.global_pools.html  index.html  sidebar-items.js  struct.BufferPool.html  struct.BufferPoolStats.html  struct.GlobalBufferPools.html  struct.PooledBuffer.html
kode_bridge/codec/: index.html  sidebar-items.js  struct.HttpIpcCodec.html  struct.ParsedRequest.html
kode_bridge/config/: index.html  sidebar-items.js  struct.ClientGlobalConfig.html  struct.ConfigBuilder.html  struct.FeatureFlags.html  struct.GlobalConfig.html  struct.LoggingConfig.html  struct.StreamingGlobalConfig.html
kode_bridge/errors/: enum.KodeBridgeError.html  index.html  sidebar-items.js  struct.ErrorString.html  type.AnyError.html  type.AnyResult.html  type.Result.html
kode_bridge/http_client/: fn.parse_response.html  fn.send_request.html  index.html  sidebar-items.js  struct.RequestBuilder.html  struct.Response.html
kode_bridge/ipc_http_client/: index.html  sidebar-items.js  struct.ClientConfig.html  struct.HttpRequestBuilder.html  struct.HttpResponse.html  struct.IpcHttpClient.html
kode_bridge/ipc_http_server/: index.html  sidebar-items.js  struct.ClientInfo.html  struct.HttpResponse.html  struct.IpcHttpServer.html  struct.RequestContext.html  struct.ResponseBuilder.html  struct.Router.html  struct.ServerConfig.html  struct.ServerStats.html  type.HandlerFn.html
kode_bridge/ipc_http_server/urlencoding/: fn.decode.html  index.html  sidebar-items.js  struct.DecodeError.html
kode_bridge/ipc_stream_client/: index.html  sidebar-items.js  struct.IpcStreamClient.html  struct.StreamClientConfig.html  struct.StreamRequestBuilder.html  struct.StreamResponse.html
kode_bridge/ipc_stream_server/: enum.StreamMessage.html  index.html  sidebar-items.js  struct.IpcStreamServer.html  struct.IteratorSource.html  struct.JsonDataSource.html  struct.StreamClient.html  struct.StreamServerConfig.html  struct.StreamServerStats.html  trait.StreamSource.html
kode_bridge/metrics/: enum.HealthStatus.html  fn.global_metrics.html  fn.init_metrics.html  index.html  sidebar-items.js  struct.BufferPoolStats.html  struct.ConnectionMetrics.html  struct.CpuTimeTracker.html  struct.ErrorMetrics.html  struct.HealthChecker.html  struct.HealthReport.html  struct.HealthThresholds.html  struct.LatencyTracker.html  struct.MetricsCollector.html  struct.MetricsSnapshot.html  struct.ParserCacheStats.html  struct.PerformanceMetrics.html  struct.RequestMetrics.html  struct.RequestTracker.html  struct.ResourceMetrics.html  struct.RetryStats.html  struct.ThroughputTracker.html
kode_bridge/parser_cache/: fn.global_parser_cache.html  fn.global_response_cache.html  index.html  sidebar-items.js  struct.CacheKey.html  struct.CacheStats.html  struct.CachedParser.html  struct.CachedResponse.html  struct.HttpParserCache.html  struct.ResponseCache.html  struct.ReusableParser.html  type.HttpParseResult.html
kode_bridge/pool/: index.html  sidebar-items.js  struct.ConnectionPool.html  struct.PoolConfig.html  struct.PoolStats.html  struct.PooledConnection.html
kode_bridge/response/: index.html  sidebar-items.js  struct.LegacyResponse.html
kode_bridge/retry/: enum.BackoffStrategy.html  enum.JitterStrategy.html  fn.retry.html  fn.retry_default.html  index.html  sidebar-items.js  struct.CircuitBreaker.html  struct.RetryConfig.html  struct.RetryExecutor.html  struct.RetryState.html  type.RetryFn.html
kode_bridge/stream_client/: fn.parse_streaming_response.html  fn.send_streaming_request.html  index.html  sidebar-items.js  struct.StreamingResponse.html
search.desc/kode_bridge/: kode_bridge-desc-0-.js
src/: buffer_pool.rs  codec.rs  config.rs  errors.rs  http_client.rs  ipc_client.rs  ipc_http_client.rs  ipc_http_server.rs  ipc_stream_client.rs  ipc_stream_server.rs  lib.rs  metrics.rs  parser_cache.rs  pool.rs  response.rs  retry.rs  stream_client.rs  types.rs
src/ipc_cilent/: mod.rs  unix.rs  windows.rs
src/ipc_http/: http_over_stream.rs  mod.rs
src/kode_bridge/: buffer_pool.rs.html  codec.rs.html  config.rs.html  errors.rs.html  http_client.rs.html  ipc_http_client.rs.html  ipc_http_server.rs.html  ipc_stream_client.rs.html  ipc_stream_server.rs.html  lib.rs.html  metrics.rs.html  parser_cache.rs.html  pool.rs.html  response.rs.html  retry.rs.html  stream_client.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/futures_core/stream/: trait.Stream.js
trait.impl/kode_bridge/ipc_stream_server/: trait.StreamSource.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
trait.impl/serde_core/de/: trait.Deserialize.js
(+10 files in other folders)
