[package]
name = "kode-bridge"
authors = ["Tunglies"]
version = "0.1.6-rc"
edition = "2024"
description = "Modern HTTP Over IPC library for Rust with both client and server support (Unix sockets, Windows named pipes)."
license = "Apache-2.0"
repository = "https://github.com/KodeBarinn/kode-bridge"
readme = "README.md"

[features]
default = ["client"]
client = []
server = []
full = ["client", "server"]

[dependencies]
interprocess = { version = "2", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "sync", "time", "macros", "signal"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
futures = "0.3"
thiserror = "2"
serde_json = "1.0.141"
serde = { version = "1.0.219", features = ["derive"] }
httparse = "1.10.1"
http = "1.3.1"
bytes = "1.10.1"
tracing = "0.1"
parking_lot = "0.12"
pin-project-lite = "0.2"
toml = "0.8"
rand = "0.9"

[dev-dependencies]
dotenv = "0.15.0"
criterion = { version = "0.7.0", features = ["async"] }
async-trait = "0.1.88"
tracing-subscriber = "0.3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[[example]]
name = "request"
path = "examples/request.rs"

[[example]]
name = "request_large"
path = "examples/request_large.rs"

[[example]]
name = "http_server"
path = "examples/http_server.rs"
required-features = ["server"]

[[example]]
name = "stream_server"  
path = "examples/stream_server.rs"
required-features = ["server"]

[[example]]
name = "traffic_monitor"
path = "examples/traffic_monitor.rs"

[[bench]]
name = "bench_version"
path = "benches/bench_version.rs"
harness = false

