[package]
name = "kode-bridge"
authors = ["Tunglies"]
version = "0.3.1"
edition = "2021"
description = "Modern HTTP Over IPC library for Rust with both client and server support (Unix sockets, Windows named pipes)."
license = "Apache-2.0"
repository = "https://github.com/KodeBarinn/kode-bridge"
readme = "README.md"
keywords = ["http", "ipc", "bridge", "async", "performance"]
categories = ["network-programming", "web-programming", "api-bindings", "asynchronous"]
rust-version = "1.76"

[features]
default = ["client"]
client = []
server = ["path-tree"]
full = ["client", "server"]

[dependencies]
interprocess = { version = "2.2.3", features = ["tokio"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "io-util", "sync", "time", "macros", "signal"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
tokio-util = { version = "0.7.16", features = ["codec", "io"] }
futures = "0.3.31"
thiserror = "2.0.16"
serde_json = "1.0.145"
serde = { version = "1.0.227", features = ["derive"] }
httparse = "1.10.1"
http = "1.3.1"
bytes = "1.10.1"
tracing = "0.1.41"
parking_lot = "0.12.4"
pin-project-lite = "0.2.16"
toml = "0.9.7"
rand = "0.9.2"
path-tree = {version = "0.8.3", optional = true}
url = "2.5.7"

[target.'cfg(unix)'.dependencies]
libc = "0.2.176"

[target.'cfg(windows)'.dependencies]
widestring = "1.2.0"

[dev-dependencies]
dotenvy = "0.15.7"
criterion = { version = "0.7.0", features = ["async"] }
async-trait = "0.1.89"
tracing-subscriber = "0.3.20"
chrono = { version = "0.4.42", default-features = false, features = ["std", "clock"] }

[[example]]
name = "request"
path = "examples/request.rs"

[[example]]
name = "request_large"
path = "examples/request_large.rs"

[[example]]
name = "http_server"
path = "examples/http_server.rs"
required-features = ["server"]

[[example]]
name = "stream_server"  
path = "examples/stream_server.rs"
required-features = ["server"]

[[example]]
name = "traffic_monitor"
path = "examples/traffic_monitor.rs"

[[bench]]
name = "bench_version"
path = "benches/bench_version.rs"
harness = false

